--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+python-txamqp (0.2.1~hardy) hardy; urgency=low
+
+  * Added recommendation to python-thrift.
+  * Update to the latest version of python-thrift.
+  * Bumped version.
+
+ -- Esteve Fernandez <esteve@fluidinfo.com>  Thu, 20 Nov 2008 17:16:18 +0100
+
 python-txamqp (0.2) hardy; urgency=low
 
   * Bump version.
