--- a/src/examples/README
+++ b/src/examples/README
@@ -1,20 +1,48 @@
 Instructions
 ============
 
+Dependencies
+------------
+
+- Ubuntu
+
+If you're using Ubuntu, you can add these sources.list entries, depending
+on the version you use:
+
+# Hardy Heron
+deb http://ppa.launchpad.net/txamqpteam/ubuntu hardy main
+deb-src http://ppa.launchpad.net/txamqpteam/ubuntu hardy main
+
+or
+
+# Intrepid Ibex
+deb http://ppa.launchpad.net/txamqpteam/ubuntu intrepid main
+deb-src http://ppa.launchpad.net/txamqpteam/ubuntu intrepid main
+
+Finally, you'll need the python-thrift package:
+
+$ sudo apt-get install python-thrift
+
+- General
+
 1. Download Thrift source code [1]
 2. Check if it contains support for Twisted, download and apply
 patch [2] if not.
 3. Compile Thrift with suppport for Python.
 4. Install Thrift.
-5. Generate Thrift Python services:
+
+Running
+-------
+
+1. Generate Thrift Python services:
     $ thrift --gen py:twisted shared.thrift
     $ thrift --gen py:twisted tutorial.thrift
-6. Start a server:
+2. Start a server:
     $ python server.py host port vhost username password path_to_spec
     Note that you can start as many servers as you want at the same time.
     Incoming requests will be round-robined and the servers load will be
     balanced automatically.
-7. Start a client:
+3. Start a client:
     $ python client.py host port vhost username password path_to_spec
 
 Where:
