updated README file

--- a/src/examples/README
+++ b/src/examples/README
@@ -26,8 +26,8 @@ $ sudo apt-get install python-thrift
 - General
 
 1. Download Thrift source code [1]
-2. Check if it contains support for Twisted, download and apply
-patch [2] if not.
+2. Check if it contains support for Twisted, you'll need revision 749795 or
+greater.
 3. Compile Thrift with suppport for Python.
 4. Install Thrift.
 
@@ -56,9 +56,8 @@ Where:
     is 'guest').
 - path_to_spec: The path to the AMQP spec that you want to use. Keep in mind
     that depending on the broker you use, you will need a different spec:
-    - RabbitMQ 1.4.0: $TXAMQP_PATH/src/specs/standard/amqp0-8.xml
-    - OpenAMQ 1.2d6: $TXAMQP_PATH/src/specs/standard/amqp0-9.xml
+    - RabbitMQ 1.5.3: $TXAMQP_PATH/src/specs/standard/amqp0-8.xml
+    - OpenAMQ 1.3c5: $TXAMQP_PATH/src/specs/standard/amqp0-9.xml
     - Qpid M3 (Java): $TXAMQP_PATH/src/specs/qpid/amqp.0-8.xml
 
 1 - http://incubator.apache.org/thrift/
-2 - http://issues.apache.org/jira/browse/THRIFT-148
