--- a/THANKS
+++ b/THANKS
@@ -1,4 +1,4 @@
-txAMQP wouldn't been possible without:
+txAMQP wouldn't have been possible without:
 
 Alex Clemesha <clemesha at gmail dot com>
 Alex Polvi <alex at polvi dot net>
