added Jonathan Stoppani

--- a/THANKS
+++ b/THANKS
@@ -6,9 +6,8 @@ Anthony Lenton <anthony dot lenton at canonical dot com>
 Dan Di Spaltro <dan dot dispaltro at gmail dot com>
 Dan Reverri <reverri at gmail dot com>
 Dorian Raymer <dorian dot raymer at gmail dot com>
+Jonathan Stoppani <jonathan at garetjax dot info>
 Matt Heitzenroder <mheitzenroder at gmail dot com>
-Matt Heitzenroder <mheitzenroder at gmail dot com>
-Paul Hubbard <hubbard at sdsc dot edu>
 Paul Hubbard <hubbard at sdsc dot edu>
 Thomas Hervé <thomas dot herve at canonical dot com>
 Zooko Wilcox-O'Hearn <zooko at zooko dot com>
