added a link to Dan Reverri's article and more info about Bazaar

--- a/doc/README
+++ b/doc/README
@@ -1,4 +1,6 @@
-This is a quick post on getting started using the txAMQP library with RabbitMQ.
+This is a quick post on getting started using the txAMQP library with RabbitMQ,
+based on Dan Reverri's article "Getting started with RabbitMQ, Python, Twisted,
+and txAMQP on Ubuntu 9.04" [http://www.apparatusproject.org/blog/?p=38]
 
 Install RabbitMQ
 	
@@ -14,18 +16,17 @@ started. If not, you'll find an init.d file in /etc/init.d/rabbitmq-server
 
 Install Twisted
 
-As of 2009-09-07, txAMQP is being developed using Twisted 8.2.0, it may
-work with older versions, but it's guaranteed. In case you are using
-Ubuntu, and the version available is not that recent, you can install
-Twisted through our PPA:
+As of 2009-07-09, txAMQP is being developed using Twisted 8.2.0, it may
+work with older versions, but it's not guaranteed. In case you are using
+Ubuntu, and the version available is not recent enough, you can install
+Twisted through its PPA:
 
-# TODO move these packages to Twisted's PPA
-https://launchpad.net/~esteve/+archive/ppa
+https://launchpad.net/~twisted-dev/+archive/ppa
 
 Install txAMQP
 
-The instructions below install txAQMP from trunk. There are Ubuntu packages available
-if you prefer, refer to the following for more details:
+The instructions below install txAQMP from trunk. There are Ubuntu packages
+available if you prefer, refer to the following page for more details:
 
 https://launchpad.net/~txamqpteam/+archive/ppa
 
@@ -37,6 +38,12 @@ b. Fetch txAQMP
 
 $ cd ~
 $ bzr branch lp:txamqp txamqp
+
+If you get the error "bzr: ERROR: Unknown repository format: 'Bazaar
+RepositoryFormatKnitPack6 (bzr 1.9)", you'll need to upgrade Bazaar. You may
+do so following the instructions at:
+
+http://bazaar-vcs.org/Download
 
 c. Install txAMQP
 
