added Dave Peticolas and Andrey Smirnov

--- a/doc/THANKS
+++ b/doc/THANKS
@@ -2,9 +2,11 @@ txAMQP wouldn't have been possible without:
 
 Alex Clemesha <clemesha at gmail dot com>
 Alex Polvi <alex at polvi dot net>
+Andrey Smirnov <me at smira dot ru>
 Anthony Lenton <anthony dot lenton at canonical dot com>
 Dan Di Spaltro <dan dot dispaltro at gmail dot com>
 Dan Reverri <reverri at gmail dot com>
+Dave Peticolas <dave at krondo dot com>
 Dorian Raymer <dorian dot raymer at gmail dot com>
 Jonathan Stoppani <jonathan at garetjax dot info>
 Matt Heitzenroder <mheitzenroder at gmail dot com>
