added Allan Bailey

--- a/doc/THANKS
+++ b/doc/THANKS
@@ -2,6 +2,7 @@ txAMQP wouldn't have been possible without:
 
 Alex Clemesha <clemesha at gmail dot com>
 Alex Polvi <alex at polvi dot net>
+Allan Bailey <zirpubolci at gmail dot com>
 Andrey Smirnov <me at smira dot ru>
 Anthony Lenton <anthony dot lenton at canonical dot com>
 Dan Di Spaltro <dan dot dispaltro at gmail dot com>
