--- a/src/examples/thrift/README
+++ b/src/examples/thrift/README
@@ -56,7 +56,7 @@ Where:
     is 'guest').
 - path_to_spec: The path to the AMQP spec that you want to use. Keep in mind
     that depending on the broker you use, you will need a different spec:
-    - RabbitMQ 1.5.3: $TXAMQP_PATH/src/specs/standard/amqp0-8.xml
+    - RabbitMQ 1.5.3: $TXAMQP_PATH/src/specs/rabbitmq/amqp0-8.stripped.xml
     - OpenAMQ 1.3c5: $TXAMQP_PATH/src/specs/standard/amqp0-9.xml
     - Qpid M3 (Java): $TXAMQP_PATH/src/specs/qpid/amqp.0-8.xml
 
