--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-txamqp (0.4-1ubuntu1~8.04) hardy; urgency=low
+
+  * Bump version.
+
+ --  <esteve@fluidinfo.com>  Mon, 13 Dec 2010 17:58:27 +0100
+
 python-txamqp (0.3-1ubuntu1~8.04) hardy; urgency=low
 
   * Bump version.
