added Aurélien Bompard

--- a/doc/THANKS
+++ b/doc/THANKS
@@ -5,6 +5,7 @@ Alex Polvi <alex at polvi dot net>
 Allan Bailey <zirpubolci at gmail dot com>
 Andrey Smirnov <me at smira dot ru>
 Anthony Lenton <anthony dot lenton at canonical dot com>
+Aurélien Bompard
 Dan Di Spaltro <dan dot dispaltro at gmail dot com>
 Dan Reverri <reverri at gmail dot com>
 Dave Peticolas <dave at krondo dot com>
