--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-txamqp (0.6.1-1ubuntu1~10.04) lucid; urgency=low
+
+  * Bump version.
+
+ --  <esteve@fluidinfo.com>  Thu, 08 Mar 2012 13:55:21 +0100
+
 python-txamqp (0.6-1ubuntu1~10.04) lucid; urgency=low
 
   * Bump version.
